--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
     background-color: #111827; /* Tailwind's gray-900 */
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
   }
   
   
